--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,13 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_176">176dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_40">40dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_50">50dp</dimen>
