--- a/app/src/main/res/layout/activity_grammar_detail_acvitity.xml
+++ b/app/src/main/res/layout/activity_grammar_detail_acvitity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.barteksc.pdfviewer.PDFView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.github.barteksc.pdfviewer.PDFView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
