create dialog result vocabulary

--- a/app/src/main/res/layout/fragment_vocabulary.xml
+++ b/app/src/main/res/layout/fragment_vocabulary.xml
@@ -57,7 +57,7 @@
 
         <RadioButton
             android:id="@+id/radio_b"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_24"
             android:layout_weight="1"
@@ -67,7 +67,7 @@
 
         <RadioButton
             android:id="@+id/radio_c"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_24"
             android:layout_weight="1"
