--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="sp_24">24sp</dimen>
     <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_300">300dp</dimen>
 </resources>
