ref task 5520 : show pdf

--- a/app/src/main/res/layout/activity_grammar_detail_acvitity.xml
+++ b/app/src/main/res/layout/activity_grammar_detail_acvitity.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.barteksc.pdfviewer.PDFView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+    android:layout_height="match_parent">
+
+    <com.github.barteksc.pdfviewer.PDFView
+        android:id="@+id/pdf_grammar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
