--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="material_blue_accent_400">#00A6FF</color>
     <color name="material_red_accent_200">#F95F62</color>
     <color name="material_white_100">#f9f6f6</color>
+    <color name="material_teal_400">#30abaa</color>
+    <color name="material_blue_grey_700">#2d5d82</color>
 </resources>
