ref task 6086: edit home screen

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,196 +8,112 @@
     tools:context=".screen.main.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <ViewFlipper
-        android:id="@+id/viewflipper"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_vocabulary"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="@dimen/dp_150"
+        android:layout_margin="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_8"
         android:layout_marginEnd="@dimen/dp_8"
         android:layout_marginRight="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_8"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/dp_10"
+        app:layout_constraintBottom_toTopOf="@+id/card_grammar"
+        app:layout_constraintEnd_toStartOf="@+id/card_basic_test"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <include layout="@layout/item_home_vocabulary" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_basic_test"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="@dimen/dp_150"
+        android:layout_margin="@dimen/dp_10"
+        android:layout_marginEnd="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_8"
+        android:layout_marginBottom="@dimen/dp_8"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/dp_10"
+        app:layout_constraintBottom_toTopOf="@+id/card_exam"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/card_vocabulary">
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="@dimen/dp_200" />
+        <include layout="@layout/item_home_basic_test" />
 
-    <ProgressBar
-        android:id="@+id/progress_vocabulary"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_10"
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_grammar"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="@dimen/dp_150"
+        android:layout_margin="@dimen/dp_10"
         android:layout_marginStart="@dimen/dp_8"
         android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toStartOf="@+id/text_progress_vocabulary"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_progress" />
-
-    <ProgressBar
-        android:id="@+id/progress_grammar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_10"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_16"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toStartOf="@+id/text_grammar"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_vocabulary" />
-
-    <ProgressBar
-        android:id="@+id/progress_basic_test"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_10"
-        android:layout_marginStart="@dimen/dp_8"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_10"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toStartOf="@+id/text_basic_test"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_grammar" />
-
-    <ProgressBar
-        android:id="@+id/progress_exam"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/dp_10"
-        android:layout_marginStart="@dimen/dp_8"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_16"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toStartOf="@+id/text_exam"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_basic_test" />
-
-    <TextView
-        android:id="@+id/text_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_8"
-        android:layout_marginLeft="@dimen/dp_8"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        android:text="@string/title_process"
-        android:textSize="@dimen/sp_20"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewflipper" />
-
-    <TextView
-        android:id="@+id/text_progress_vocabulary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progress_vocabulary"
-        app:layout_constraintTop_toBottomOf="@+id/text_progress" />
-
-    <TextView
-        android:id="@+id/text_grammar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progress_grammar"
-        app:layout_constraintTop_toBottomOf="@+id/text_progress_vocabulary" />
-
-    <TextView
-        android:id="@+id/text_basic_test"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progress_basic_test"
-        app:layout_constraintTop_toBottomOf="@+id/text_grammar" />
-
-    <TextView
-        android:id="@+id/text_exam"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
-        android:layout_marginEnd="@dimen/dp_8"
-        android:layout_marginRight="@dimen/dp_8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/progress_exam"
-        app:layout_constraintTop_toBottomOf="@+id/text_basic_test" />
-
-    <Button
-        android:id="@+id/button_grammar"
-        android:layout_width="@dimen/dp_120"
-        android:layout_height="@dimen/dp_80"
-        android:background="@drawable/button_grammar"
-        android:text="@string/action_grammar"
-        app:layout_constraintBottom_toTopOf="@+id/button_exam"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_vocabulary"
-        app:layout_constraintTop_toBottomOf="@+id/progress_exam" />
-
-    <Button
-        android:id="@+id/button_basic_test"
-        android:layout_width="@dimen/dp_120"
-        android:layout_height="@dimen/dp_80"
-        android:background="@drawable/button_basic_test"
-        android:text="@string/action_basic_test"
+        android:layout_marginBottom="@dimen/dp_8"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/button_exam"
+        app:layout_constraintEnd_toStartOf="@+id/card_exam"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_vocabulary" />
+        app:layout_constraintStart_toStartOf="parent">
 
-    <Button
-        android:id="@+id/button_exam"
-        android:layout_width="@dimen/dp_120"
-        android:layout_height="@dimen/dp_80"
-        android:background="@drawable/button_exam"
-        android:text="@string/action_exam"
+        <include layout="@layout/item_home_grammar" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_exam"
+        android:layout_width="@dimen/dp_140"
+        android:layout_height="@dimen/dp_150"
+        android:layout_margin="@dimen/dp_10"
+        android:layout_marginStart="@dimen/dp_8"
+        android:layout_marginLeft="@dimen/dp_8"
+        android:layout_marginEnd="@dimen/dp_8"
+        android:layout_marginRight="@dimen/dp_8"
+        android:layout_marginBottom="@dimen/dp_8"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/dp_10"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_basic_test"
-        app:layout_constraintTop_toBottomOf="@+id/button_grammar" />
+        app:layout_constraintStart_toEndOf="@+id/card_grammar">
 
-    <Button
-        android:id="@+id/button_vocabulary"
-        android:layout_width="@dimen/dp_120"
-        android:layout_height="@dimen/dp_80"
-        android:background="@drawable/button_vocabulary"
-        android:text="@string/action_vocabulary"
-        app:layout_constraintBottom_toTopOf="@+id/button_basic_test"
-        app:layout_constraintEnd_toStartOf="@+id/button_grammar"
-        app:layout_constraintHorizontal_bias="0.5"
+        <include layout="@layout/item_home_exam" />
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_user"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_40"
+        android:layout_marginBottom="@dimen/dp_8"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/dp_10"
+        app:layout_constraintBottom_toTopOf="@+id/card_vocabulary"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progress_exam" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <include layout="@layout/item_home_user" />
+
+    </android.support.v7.widget.CardView>
 
 </android.support.constraint.ConstraintLayout>
