--- a/app/src/main/res/drawable/button_basic_test.xml
+++ b/app/src/main/res/drawable/button_basic_test.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dp_10" />
-    <solid android:color="#00A6FF" />
+    <solid android:color="#FFBA5C" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
