--- a/app/src/main/res/drawable/button_person.xml
+++ b/app/src/main/res/drawable/button_person.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="@dimen/dp_10" />
-    <solid android:color="#43C6AC" />
+    <corners android:radius="10dp" />
+    <solid android:color="#7266ba" />
     <padding
         android:bottom="0dp"
         android:left="0dp"
