--- a/app/src/main/res/layout/item_exam.xml
+++ b/app/src/main/res/layout/item_exam.xml
@@ -26,8 +26,7 @@
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_exam_1" />
+            app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
             android:id="@+id/text_name_exam"
