--- a/app/src/main/res/layout/item_home_user.xml
+++ b/app/src/main/res/layout/item_home_user.xml
@@ -6,7 +6,7 @@
     android:background="@drawable/button_person">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_user"
         android:layout_width="@dimen/dp_80"
         android:layout_height="@dimen/dp_80"
         android:layout_marginStart="@dimen/dp_8"
@@ -34,10 +34,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/text_line" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/text_title_target"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/dp_8"
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/text_name" />
 
     <View
-        android:id="@+id/textView3"
+        android:id="@+id/text_line"
         android:layout_width="@dimen/dp_150"
         android:layout_height="@dimen/dp_1"
         android:layout_marginStart="@dimen/dp_8"
@@ -65,7 +65,7 @@
         android:background="@color/material_grey_200"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/image_user" />
 
     <TextView
         android:id="@+id/text_target"
@@ -78,6 +78,6 @@
         android:textColor="@color/common_google_signin_btn_text_dark_default"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/text_title_target"
         app:layout_constraintTop_toBottomOf="@+id/text_name" />
 </android.support.constraint.ConstraintLayout>
