--- a/app/src/main/res/drawable/ic_next.xml
+++ b/app/src/main/res/drawable/ic_next.xml
@@ -1,9 +1,23 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24.0"
-    android:viewportHeight="24.0">
+    android:viewportWidth="128"
+    android:viewportHeight="128">
     <path
-        android:fillColor="#FF000000"
-        android:pathData="M12,4l-1.41,1.41L16.17,11H4v2h12.17l-5.58,5.59L12,20l8,-8z" />
+        android:fillColor="#00000000"
+        android:pathData="M70.88,24.666L110.213,64"
+        android:strokeWidth="12"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="square" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M110.213,64L70.88,103.334"
+        android:strokeWidth="12"
+        android:strokeColor="#ffffff"
+        android:strokeLineCap="square" />
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M110.213,64L9.787,64"
+        android:strokeWidth="12"
+        android:strokeColor="#ffffff" />
 </vector>
