--- a/app/src/main/res/layout/activity_basic_test.xml
+++ b/app/src/main/res/layout/activity_basic_test.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screen.basic_test.BasicTestActivity">
+    tools:context=".screen.basic_test.BasicTestActivity"
+    android:background="@drawable/gradient_vocabulary">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_basic_test"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layoutAnimation="@anim/layout_animation_from_right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
