--- a/app/src/main/res/layout/item_basic_test.xml
+++ b/app/src/main/res/layout/item_basic_test.xml
@@ -27,7 +27,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_basic_test" />
+            app:srcCompat="@drawable/ic_basic_1" />
 
         <TextView
             android:id="@+id/text_name_basic"
@@ -52,6 +52,7 @@
             android:numStars="5"
             android:scaleX="0.5"
             android:scaleY="0.5"
+            android:theme="@style/RatingBar1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_grammar"
             app:layout_constraintStart_toStartOf="parent"
