--- a/app/src/main/res/layout/item_vocabulary.xml
+++ b/app/src/main/res/layout/item_vocabulary.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_margin="@dimen/dp_4"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    app:cardBackgroundColor="@color/trasparent"
+    app:cardCornerRadius="@dimen/dp_5"
+    android:layout_margin="@dimen/dp_2">
 
-    <android.support.constraint.ConstraintLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/trasparent">
 
         <CheckBox
             android:id="@+id/check_vocabulary"
@@ -19,6 +21,7 @@
             android:layout_marginLeft="@dimen/dp_32"
             android:layout_marginTop="@dimen/dp_16"
             android:layout_marginBottom="@dimen/dp_16"
+            android:theme="@style/MyCheckBox"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +34,7 @@
             android:layout_marginStart="@dimen/dp_32"
             android:layout_marginLeft="@dimen/dp_32"
             android:layout_marginTop="@dimen/dp_16"
+            android:textColor="@color/material_cyan_300"
             app:layout_constraintBottom_toTopOf="@+id/text_description_vocabulary"
             app:layout_constraintStart_toEndOf="@+id/check_vocabulary"
             app:layout_constraintTop_toTopOf="parent" />
@@ -43,6 +47,7 @@
             android:layout_marginStart="@dimen/dp_32"
             android:layout_marginLeft="@dimen/dp_32"
             android:layout_marginBottom="@dimen/dp_16"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/check_vocabulary"
             app:layout_constraintTop_toBottomOf="@+id/text_title_vocabulary" />
