--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,7 +4,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/material_blue_500</item>
-        <item name="colorPrimaryDark">@color/material_blue_dark</item>
+        <item name="colorPrimaryDark">@color/material_accent_700</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
@@ -27,5 +27,16 @@
         <item name="colorControlNormal">@color/material_orange_300</item>
         <item name="colorControlActivated">@color/material_orange_300</item>
     </style>
+
+    <style name="MyCheckBox" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorControlNormal">#ffffff</item>   <!-- normal border color change as you wish -->
+        <item name="colorControlActivated">#ffffff</item> <!-- activated color change as you wish -->
+    </style>
+
+    <style name="RatingBar1" parent="Base.Widget.AppCompat.RatingBar" >
+        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlActivated">@color/white</item>
+    </style>
+
 
 </resources>
