edit deatil activity

--- a/app/src/main/res/layout/activity_basic_test.xml
+++ b/app/src/main/res/layout/activity_basic_test.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screen.basic_test.BasicTestActivity">
+    tools:context=".screen.basic_test.BasicTestActivity"
+    android:background="@drawable/gradient_vocabulary">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_basic_test"
