--- a/app/src/main/res/layout/item_exam_question_type_2.xml
+++ b/app/src/main/res/layout/item_exam_question_type_2.xml
@@ -46,7 +46,7 @@
                 android:layout_marginBottom="@dimen/dp_8"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
 
             <RadioButton
                 android:id="@+id/radio_b"
@@ -58,7 +58,7 @@
                 android:layout_marginBottom="@dimen/dp_8"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
 
             <RadioButton
                 android:id="@+id/radio_c"
@@ -70,7 +70,7 @@
                 android:layout_marginBottom="@dimen/dp_8"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
         </RadioGroup>
 
     </android.support.constraint.ConstraintLayout>
