--- a/app/src/main/res/layout/item_exam_question_type_3.xml
+++ b/app/src/main/res/layout/item_exam_question_type_3.xml
@@ -58,7 +58,7 @@
                 android:layout_marginTop="@dimen/dp_16"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
 
             <RadioButton
                 android:id="@+id/radio_b"
@@ -67,7 +67,7 @@
                 android:layout_marginTop="@dimen/dp_16"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
 
             <RadioButton
                 android:id="@+id/radio_c"
@@ -76,7 +76,7 @@
                 android:layout_marginTop="@dimen/dp_16"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
 
             <RadioButton
                 android:id="@+id/radio_d"
@@ -85,7 +85,7 @@
                 android:layout_marginTop="@dimen/dp_16"
                 android:layout_weight="1"
                 android:textColor="@color/white"
-                android:theme="@style/MyCheckBox" />
+                android:theme="@style/StyleCheckbox" />
         </RadioGroup>
 
     </android.support.constraint.ConstraintLayout>
