--- a/app/src/main/res/layout/activity_vocabulary.xml
+++ b/app/src/main/res/layout/activity_vocabulary.xml
@@ -24,7 +24,7 @@
         android:layout_marginEnd="@dimen/dp_16"
         android:layout_marginRight="@dimen/dp_16"
         android:layout_marginBottom="@dimen/dp_16"
-        android:theme="@style/MyCheckBox"
+        android:theme="@style/StyleCheckbox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_next" />
