--- a/app/src/main/res/layout/item_exam.xml
+++ b/app/src/main/res/layout/item_exam.xml
@@ -51,7 +51,7 @@
             android:numStars="5"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            android:theme="@style/RatingBar1"
+            android:theme="@style/StyleRatingBarLesson"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/image_grammar"
             app:layout_constraintStart_toStartOf="parent"
