--- a/app/src/main/res/layout/item_seekbar.xml
+++ b/app/src/main/res/layout/item_seekbar.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="@dimen/dp_8"
         android:layout_marginRight="@dimen/dp_8"
         android:layout_marginBottom="@dimen/dp_4"
-        android:theme="@style/MyCheckBox"
+        android:theme="@style/StyleCheckbox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/image_play_pause"
         app:layout_constraintHorizontal_bias="0.0"
