--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,25 +23,18 @@
         <item name="android:textStyle">italic</item>
     </style>
 
-    <style name="RatingBar" parent="Base.Widget.AppCompat.RatingBar">
+    <style name="StyleRatingBarDialogResult" parent="Base.Widget.AppCompat.RatingBar" >
         <item name="colorControlNormal">@color/material_orange_300</item>
         <item name="colorControlActivated">@color/material_orange_300</item>
     </style>
 
-    <style name="RatingBar1" parent="Base.Widget.AppCompat.RatingBar">
+    <style name="StyleRatingBarLesson" parent="Base.Widget.AppCompat.RatingBar" >
         <item name="colorControlNormal">@color/white</item>
         <item name="colorControlActivated">@color/white</item>
     </style>
 
-    <style name="MyCheckBox" parent="Theme.AppCompat.NoActionBar">
-        <item name="colorControlNormal">#ffffff
-        </item>   <!-- normal border color change as you wish -->
-        <item name="colorControlActivated">#ffffff
-        </item> <!-- activated color change as you wish -->
-    </style>
-
-    <style name="foodRatingBar" parent="@android:style/Widget.RatingBar">
-        <item name="android:minHeight">22dip</item>
-        <item name="android:maxHeight">22dip</item>
+    <style name="StyleCheckbox" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorControlNormal">#ffffff</item>   <!-- normal border color change as you wish -->
+        <item name="colorControlActivated">#ffffff</item> <!-- activated color change as you wish -->
     </style>
 </resources>
