ref task 4793: show answer and point

--- a/app/src/main/res/layout/item_seekbar.xml
+++ b/app/src/main/res/layout/item_seekbar.xml
@@ -32,5 +32,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_pause_button" />
+        app:srcCompat="@drawable/ic_play_button" />
 </android.support.constraint.ConstraintLayout>
