--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,7 +16,7 @@
     <color name="material_cyan_500">#01bcd4</color>
     <color name="material_brown_600">#6e3159</color>
     <color name="material_red_400">#ef5555</color>
-    <color name="material_grey_200">#ededed</color>
+    <color name="material_grey_200">#EDEDED</color>
     <color name="marterial_deep_purple_200">#e8e6fa</color>
     <color name="marterial_indigo_400">#7266ba</color>
     <color name="marterial_indigo_500">#3f009e</color>
@@ -28,4 +28,5 @@
     <color name="material_blue_500">#00A6FF</color>
     <color name="material_blue_dark">#2962FF</color>
     <color name="material_red_dark_600">#ffcc0000</color>
+    <color name="material_gray_700">#757575</color>
 </resources>
