--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -37,4 +37,9 @@
         <item name="colorControlNormal">#ffffff</item>   <!-- normal border color change as you wish -->
         <item name="colorControlActivated">#ffffff</item> <!-- activated color change as you wish -->
     </style>
+
+    <style name="StyleRadioButton" parent="Theme.AppCompat.NoActionBar">
+    <item name="colorControlNormal">#43C6AC</item>
+    <item name="colorControlActivated">#43C6AC</item>
+    </style>
 </resources>
